--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Kimseongwook
-  email: githubwgowgo@gmail.com # change to your email address
+  email: wgowgosy@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://x.com/wgowgo1118 # change to your Twitter homepage
